[package]
name = "ebo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = { version = "0.8", features = ["std_rng"] }
hex = "0.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
anyhow = "1.0.98"

[dev-dependencies]
proptest = "1.0"
